--- a/index.html
+++ b/index.html
@@ -4,37 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Genshin Impact</title>
+    <title>Higher or Lower</title> 
 </head>
 
 <body">
-    <div class="mainContainer">
+    <div class="mainContainer"> <!--Hier zit alle lives coins en de zwevende titel in-->
         <div class="iconLeft">
             <img src="Images/hart.webp">
             <p id = "lifeScreen", class="livesText">Lives</p>
         </div>
 
         <div>
-            <h1>Higher or Lower</h1>
+            <h1 class="Title">Higher or Lower</h1> <!--titel en nummer van de dice-->
             <div class = "diceNumber">
                 <img src="Images/frame.webp">
-                <p id = "scoreScreen">#</p>    
+                <p id = "scoreScreen">#</p>   <!--score-->
             </div>        
         </div>
 
         <div class="iconRight">
             <img src="Images/coin.webp">
-            <p id = "coinScreen", class="coinsText">Coins</p>
+            <p id = "coinScreen", class="coinsText">Coins</p> <!--coins-->
         </div>
     </div>
 
-    <div class="controlButtons">
-        <button id = "btnThrow", onclick="throwDice()">Start</button>
-        <button id = "btnHigher", onclick="higher()">Higher</button>
+    <div class="controlButtons"> <!--buttons-->
+        <button id = "btnThrow", onclick="throwDice()">Go</button>
+        <button id = "btnHigher", onclick="higher()">Higher</button> 
         <button id = "btnLower", onclick = "lower()">Lower</button>
     </div>
 
-    <p id="feedbackText", class="feedbackTekst"></p>
+    <p id="feedbackText", class="feedbackTekst"></p> <!--tekst onder-->
 
     <script src="main.js"></script>
 </body>
